--- a/src/main/resources/assets/tweakeroo/lang/en_us.json
+++ b/src/main/resources/assets/tweakeroo/lang/en_us.json
@@ -11,11 +11,7 @@
 
     "tweakeroo.hotkeys.category.generic_hotkeys": "Generic hotkeys",
     "tweakeroo.hotkeys.category.tweak_toggle_hotkeys": "Tweak toggle hotkeys",
-
-    "tweakeroo.label.list_type.blacklist": "Black List",
-    "tweakeroo.label.list_type.none": "None",
-    "tweakeroo.label.list_type.whitelist": "White List",
-
+    
     "tweakeroo.label.placement_restriction_mode.plane": "Plane",
     "tweakeroo.label.placement_restriction_mode.face": "Face",
     "tweakeroo.label.placement_restriction_mode.column": "Column",
@@ -25,19 +21,25 @@
     "tweakeroo.message.potion_effects_running_out": "§6!! WARNING - %s potion effect(s) about to run out in %s seconds !!§r",
     "tweakeroo.message.repair_mode.swapped_repairable_item_to_hand": "Swapped a repairable item to hand",
     "tweakeroo.message.set_after_clicker_count_to": "Set After Clicker count to %s",
+    "tweakeroo.message.set_fly_speed_preset_to": "Switched to fly speed preset %s (speed: %s)",
+    "tweakeroo.message.set_fly_speed_to": "Set fly speed of preset %s to %s",
     "tweakeroo.message.set_hotbar_slot_cycle_max_to": "Set Hotbar Slot Cycle max slot to %s",
     "tweakeroo.message.set_placement_grid_size_to": "Set Placement Grid size to %s",
     "tweakeroo.message.set_placement_limit_to": "Set Placement Limit to %s",
     "tweakeroo.message.set_placement_restriction_mode_to": "Set Placement Restriction mode to %s",
+    "tweakeroo.message.set_zoom_fov_to": "Set zoom FOV to %s",
+    "tweakeroo.message.sign_text_copied": "Sign text copied",
     "tweakeroo.message.swapped_low_durability_item_for_better_durability": "Swapped a low durability item for one with more durability",
     "tweakeroo.message.swapped_low_durability_item_for_dummy_item": "Swapped a low durability item for a dummy item",
     "tweakeroo.message.swapped_low_durability_item_off_players_hand": "Swapped a low durability item off the player's hand",
     "tweakeroo.message.toggled": "Toggled %s %s",
     "tweakeroo.message.toggled_after_clicker_on": "Toggled After Clicker tweak %s, clicks: %s",
-    "tweakeroo.message.toggled_slot_cycle_on": "Toggled Hotbar Slot Cycle tweak %s, max slot: %s",
+    "tweakeroo.message.toggled_fly_speed_on": "Toggled Fly Speed tweak %s, preset: %s, speed: %s",
+    "tweakeroo.message.toggled_fast_placement_mode_on": "Toggled Fast Placement mode %s, mode: %s",
     "tweakeroo.message.toggled_placement_grid_on": "Toggled Placement Grid tweak %s, grid interval: %s",
     "tweakeroo.message.toggled_placement_limit_on": "Toggled Placement Limit tweak %s, limit: %s",
-    "tweakeroo.message.toggled_fast_placement_mode_on": "Toggled Fast Placement mode %s, mode: %s",
+    "tweakeroo.message.toggled_slot_cycle_on": "Toggled Hotbar Slot Cycle tweak %s, max slot: %s",
+    "tweakeroo.message.toggled_zoom_on": "Toggled zoom %s, FOV: %s",
     "tweakeroo.message.value.off": "OFF",
     "tweakeroo.message.value.on": "ON"
 }
